added model testing for GetAll and methods to clear and add to a database

--- a/WorldDatabase/Views/City/Index.cshtml
+++ b/WorldDatabase/Views/City/Index.cshtml
@@ -10,7 +10,7 @@
   </head>
   <body class="container">
     <h1>Never have to count words in a sentence again!</h1>
-    @if (Model.Count == 0)
+    @* @if (Model.Count == 0)
         {
           <p>You have not inputted any words :( !</p>
         }
@@ -24,7 +24,7 @@
             <a href='/counter/@city.Id/delete' class="smaller-text">Ok, now delete this one</a>
           </div>
         }
-        }
+        } *@
 
 
     <a href="/counter/new" class="new-form">Get the count for a new phrase!</a>
